<resources>
    <string name="app_name">M\'eat-Time</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1218309744962656</string>
    <string name="fb_login_protocol_scheme">fb1218309744962656</string>

    //strings for loginpage

    <string name="quote_eng">More than just food.</string>
    <string name="lost_password">Lost password</string>
    <string name="sign_up">Sign up here</string>
    <string name="logfb">Sign in with Facebook</string>
    <string name="logg">Sign in with Google</string>
    <string name="sign_in">Sign in</string>
    <string name="dialog_message">fire</string>
    <string name="dialog_title">yolo</string>

    // strings for Password recovery

    <string name="pwreset">Password Reset</string>
    <string name="e_mail">Email</string>
    <string name="send_pwd">Send</string>
    <string name="cancel">Cancel</string>

    // strings for registration

    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register_pw">Password</string>
    <string name="rep_register_pw">Repeat password</string>
    <string name="register_mail">E-mail</string>
    <string name="title_activity_main">MainActivity</string>

    // Drawer

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_text_account">Account</string>

    <string name="action_example">Example action</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sendButton">Send</string>
    <string name="reset_token">Reset Token</string>
    <string name="pwreset_new_password">New Password</string>
    <string name="pwreset_repeat_password">Repeat Password</string>
    <string name="pwrecovery_text">Please enter your emailadres to recieve the password reset token</string>

    <string name="title_activity_register_acctivity">RegisterAcctivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="banner">Banner</string>

</resources>
