<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/register_mail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/register_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/register_pw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/register_pw"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/register_pw_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/rep_register_pw"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <Button
            android:id="@+id/send"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/sendButton"/>
    </LinearLayout>
</ScrollView>
