<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             tools:context=".Activities.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="91dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners"
        android:contentDescription="@string/banner"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:maxLines="1"
        android:text="@string/quote_eng"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout         android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="vertical">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/first_name"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/register_mail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/register_mail"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/register_pw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/register_pw"
            android:inputType="textPassword"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/register_pw_check"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:hint="@string/rep_register_pw"
            android:inputType="textPassword"
            android:maxLines="1"/>
            </LinearLayout>

        </ScrollView>

            <Button
                android:id="@+id/register_btn"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/register"/>


</LinearLayout>
