<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center">

    <EditText
        android:id="@+id/pwreset_token"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/reset_token"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>

    <EditText
        android:id="@+id/pwreset_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/pwreset_new_password"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>

    <EditText
        android:id="@+id/pwreset_password_repeat"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/pwreset_repeat_password"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"/>

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="@drawable/button_signin4"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/sendButton"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
